# sentinel-vision

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml  multi_camera.yaml
configs/profiles/: benchmark_association_tuned.yaml  crowded_tracking.yaml  edge_cpu.yaml  edge_gpu.yaml  low_latency.yaml
data/eval/: README.md  benchmark_manifest.json  benchmark_manifest_public_datasets.json
docker/: start_pipeline.sh
docs/: architecture.md  deployment.md  reproducibility.md  results.md  results_dashboard.html  results_public_dataset_benchmark_association_tuned.md  results_public_dataset_cpu.html  results_public_dataset_cpu.md
scripts/: __init__.py  compress_benchmark_videos.py  evaluate_events.py  frames_to_video.py  import_mot17.py  import_visdrone_mot.py  render_metrics_report.py  run_benchmark.py  scaffold_benchmark_clip.py
src/: main.py
src/api/: app.py  dashboard.py  models.py  storage.py
src/events/: abandoned_object.py  after_hours.py  intrusion.py  line_crossing.py  loitering.py  vehicle_zone.py  wrong_way.py  zones.py
src/inference/: appearance.py  detector.py  ground_plane.py  heatmap.py  motion.py  (+3 more)
tests/: test_api_app.py  test_api_storage.py  test_configs.py  test_dataset_importers.py  test_evaluate_events.py  test_events.py  test_extended_events.py  test_ground_plane.py  test_health.py  test_main.py  test_motion.py  test_pipeline_integration.py  test_recorder.py  test_run_benchmark.py  test_tracker.py  test_zones.py
(+24 files in other folders)
